--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "latest",
     "@angular/compiler": "latest",
     "@angular/core": "latest",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "latest",
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
