--- a/package.json
+++ b/package.json
@@ -10,34 +10,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "latest",
-    "@angular/common": "latest",
-    "@angular/compiler": "latest",
-    "@angular/core": "latest",
-    "@angular/fire": "^18.0.1",
-    "@angular/forms": "latest",
-    "@angular/platform-browser": "latest",
-    "@angular/platform-browser-dynamic": "latest",
-    "@angular/router": "latest",
-    "ngx-mask": "latest",
-    "rxjs": "latest",
-    "tslib": "latest",
-    "zone.js": "latest"
+    "@angular/animations": "18.0.0",
+    "@angular/common": "18.0.0",
+    "@angular/compiler": "18.0.0",
+    "@angular/core": "18.0.0",
+    "@angular/fire": "18.0.1",
+    "@angular/forms": "18.0.0",
+    "@angular/platform-browser": "18.0.0",
+    "@angular/platform-browser-dynamic": "18.0.0",
+    "@angular/router": "18.0.0",
+    "@ffmpeg/core": "0.12.6",
+    "@ffmpeg/ffmpeg": "0.11.6",
+    "@types/node": "20.14.5",
+    "@types/uuid": "9.0.8",
+    "@types/video.js": "7.3.58",
+    "@videojs/themes": "1.0.1",
+    "ngx-mask": "17.0.8",
+    "rxjs": "~7.8.0",
+    "tslib": "2.3.0",
+    "uuid": "10.0.0",
+    "video.js": "8.12.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "latest",
-    "@angular/cli": "latest",
-    "@angular/compiler-cli": "latest",
-    "@types/jasmine": "latest",
-    "autoprefixer": "latest",
-    "jasmine-core": "latest",
-    "karma": "latest",
-    "karma-chrome-launcher": "latest",
-    "karma-coverage": "latest",
-    "karma-jasmine": "latest",
-    "karma-jasmine-html-reporter": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "typescript": "latest"
+    "@angular-devkit/build-angular": "18.0.0",
+    "@angular/cli": "18.0.0",
+    "@angular/compiler-cli": "18.0.0",
+    "@cypress/schematic": "2.5.2",
+    "@types/jasmine": "~5.1.0",
+    "autoprefixer": "10.4.19",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "~5.4.2"
   }
 }
