--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser": "18.0.0",
     "@angular/platform-browser-dynamic": "18.0.0",
     "@angular/router": "18.0.0",
-    "@ffmpeg/core": "0.12.6",
-    "@ffmpeg/ffmpeg": "0.11.6",
-    "@types/node": "20.14.5",
+    "@ffmpeg/core": "^0.11.0",
+    "@ffmpeg/ffmpeg": "^0.11.6",
+    "@types/node": "^20.14.5",
     "@types/uuid": "9.0.8",
     "@types/video.js": "7.3.58",
     "@videojs/themes": "1.0.1",
