--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,11 @@
                 "glob": "*"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "video.js/dist/video-js.css",
+              "@videojs/themes/dist/forest/index.css"
+            ],
             "scripts": []
           },
           "configurations": {
