--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@ffmpeg/ffmpeg": "^0.11.6",
     "@types/node": "^20.14.5",
     "@types/uuid": "9.0.8",
-    "@types/video.js": "7.3.58",
-    "@videojs/themes": "1.0.1",
+    "@types/video.js": "^7.3.58",
+    "@videojs/themes": "^1.0.1",
     "ngx-mask": "17.0.8",
     "rxjs": "~7.8.0",
     "tslib": "2.3.0",
     "uuid": "10.0.0",
-    "video.js": "8.12.0",
+    "video.js": "^8.12.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
